--- a/Gestao_Educacional/package.json
+++ b/Gestao_Educacional/package.json
@@ -13,6 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "bootstrap": "^5.3.5",
+    "chart.js": "^4.4.9",
+    "tempusdominus": "^5.16.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
